# mikrotik-observability-stack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  README.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
cli/mikrotik_observability_stack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli/mosctl/: __init__.py  cli.py  config_loader.py  test_targets.py  validate.py
compose/: docker-compose.full.yml  docker-compose.minimal.yml
config/: env.example  mikrotik-devices.example.yml
docker/exporters/routeros_exporter/: config-sample.yml
docker/exporters/snmp_exporter/: snmp.yml
docker/grafana/provisioning/dashboards/: dashboards.yml  mikrotik-logs.json  mikrotik-overview.json  mikrotik-wan.json  mikrotik-wireless.json
docker/loki/: loki-config.yml
docker/prometheus/: alertmanager.yml  prometheus.yml
docker/prometheus/alerts/: mikrotik-rules.yml
docker/prometheus/file_sd/: snmp-targets.json  targets-mikrotik.json
docker/promtail/: promtail-config.yml
k8s/: namespaces.yml
k8s/exporters/: configmap.yml  deployment.yml
k8s/grafana/: deployment.yml
k8s/loki/: configmap.yml  statefulset.yml
k8s/prometheus/: configmap.yml  deployment.yml
scripts/: bootstrap.sh  lint.sh  perf-check.sh  security-scan.sh  validate-config.sh
tests/integration/: test_compose_full.py  test_compose_minimal.py
tests/unit/: test_cli.py  test_config_loader.py  test_validate.py
